--- a/resource/RosGraph.ui
+++ b/resource/RosGraph.ui
@@ -407,7 +407,7 @@
   <customwidget>
    <class>InteractiveGraphicsView</class>
    <extends>QGraphicsView</extends>
-   <header>rqt_graph.interactive_graphics_view</header>
+   <header>rmermaid_graph.interactive_graphics_view</header>
   </customwidget>
  </customwidgets>
  <resources/>
